--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ libraries/*.jar
 /dist/
 /nbdist/
 /.nb-gradle/
+
+### Gradle ###
+.gradle/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
