--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
+# Project properties
+group = com.example
+name = ExamplePlugin
+version = 1.0.0
+description = Your plugin description here.
+website = https://example.com
+main = com.example.plugin.ExamplePlugin
+
 # Gradle properties
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 org.gradle.parallel=true
